# adif

./: .gitignore  CLAUDE.md
.claude/: bridge-journal.md  settings.json
.claude/agents/: divisions.json
database/: docker-compose.yml
docs/: adif-roadmap.html  combat-system.html  eq-world-protocol.html  how-eq-works.html  index.html  opcode-audit.html  postgresql-errors-inventory.md  postgresql-migration-map.md  postgresql-parity-report.txt  postgresql-postmortem.html  rust-server.html  struct-proto-map.html  tech-comparison.html  zone-entry-comparison.html  zone-server-status.html
proto/: README.md  buf.gen.yaml  buf.yaml
scripts/: StartBridge.bat  compare-pg-to-mysql.py  convert-repos-to-pg.py  docs-server.py  godmode.ps1  proto-check.ps1  setup-db.ps1  setup-eq-client.ps1  start-bridge.ps1  udp-proxy.py
server/: Cargo.toml  server.toml
server/adif-bridge/: Cargo.toml
server/adif-bridge/src/: login_handler.rs  main.rs  world_handler.rs
server/adif-bridge/src/eq_protocol/: codec.rs  fragment.rs  mod.rs  packet.rs  session.rs
server/adif-bridge/src/titanium/: mod.rs  opcodes.rs  structs.rs
server/adif-common/: Cargo.toml
server/adif-common/src/: config.rs  db.rs  lib.rs
server/adif-proto/: Cargo.toml  build.rs
server/adif-proto/src/: lib.rs
server/adif-world/: Cargo.toml
server/adif-world/src/: account.rs  character.rs  lib.rs  zone_registry.rs  zone_routing.rs
server/adif-zone/: Cargo.toml
server/adif-zone/src/: chat.rs  game_loop.rs  geometry.rs  main.rs  movement.rs  zone_config.rs  zone_transition.rs
server/adif-zone/src/ai/: hate_list.rs  mod.rs  patrol.rs  state.rs  systems.rs
server/adif-zone/src/combat/: damage.rs  mod.rs  systems.rs
server/adif-zone/src/ecs/: components.rs  entity_id.rs  mod.rs  spawn_convert.rs
server/adif-zone/src/network/: broadcast.rs  framing.rs  mod.rs  server.rs  session.rs
server/adif-zone/src/spawn/: mod.rs  npc_type.rs  resolver.rs  spawn_point.rs
server/adif-zone/tests/: full_scenario.rs  network_integration.rs
(+181 files in other folders)
