[package]
name = "adif-world"
version.workspace = true
edition.workspace = true

[lib]
name = "adif_world"
path = "src/lib.rs"

[dependencies]
adif-common = { path = "../adif-common" }
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json = "1"
